# pyannote-ggml

./: .gitignore  .gitmodules  AGENTS.md  INTEGRATION_PLAN.md  README.md  consolidate-whisper-cpp-node-into-pyannote-cpp-node.md  diarization_whisper_integration.md  setup.py
.github/workflows/: release-node-packages.yml
.serena/: project.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: whisper-diarization-integration.md
.sisyphus/notepads/coreml-feasibility/: feasibility_report.md  learnings.md
.sisyphus/notepads/diarization-ggml/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/model-cache/: decisions.md  learnings.md
.sisyphus/notepads/node-bindings/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/node-bindings-pipeline/: decisions.md  learnings.md
.sisyphus/notepads/pyannote-ggml/: current_architecture_audit.md  decisions.md  issues.md  learnings.md  lstm_optimization_research.md  problems.md  whisper_cpp_analysis.md
.sisyphus/notepads/streaming-diarization/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/whisper-coreml-switch/: learnings.md
.sisyphus/notepads/whisper-diarization-integration/: learnings.md
.sisyphus/plans/: diarization-ggml.md  node-bindings-pipeline.md  node-bindings.md  pyannote-ggml.md  separate-audio-event.md  streaming-diarization.md  whisper-diarization-integration.md
bindings/node/: .gitignore  package.json  pnpm-lock.yaml  rebuild.sh  tsconfig.json
bindings/node/native/pipeline/: win_pipeline_stubs.cpp  win_pipeline_stubs.h
bindings/node/native/whisper/: whisper_addon.h  whisper_addon_wrapper.cpp
bindings/node/scripts/: run-platform-build.js  stage-native-addon.js
diarization-ggml/: CMakeLists.txt  STREAMING_DESIGN.md  convert_plda.py  output.json  plda_validation.npz
diarization-ggml/include/: aggregation.h  clustering.h  diarization.h  diarization_stream.h  plda.h  powerset.h  provisional.h  rttm.h  streaming.h  transcriber_types.h  vbx.h
diarization-ggml/src/: aggregation.cpp  aligner.cpp  aligner.h  audio_buffer.cpp  audio_buffer.h  clustering.cpp  diarization.cpp  main.cpp  main_transcribe.cpp  model_cache.cpp  model_cache.h  offline_pipeline.cpp  offline_pipeline.h  pipeline.cpp  pipeline.h  plda.cpp  powerset.cpp  provisional.cpp  provisional.h  rttm.cpp  segment_detector.cpp  segment_detector.h  silence_filter.cpp  silence_filter.h  streaming.cpp  streaming.h  streaming_state.h  transcriber.cpp  transcriber.h  vbx.cpp
diarization-ggml/src/fastcluster/: fastcluster.cpp  fastcluster.h
diarization-ggml/tests/: compare_pipeline.py  compare_rttm.py  test_aligner.cpp  test_audio_buffer.cpp  test_integration.py  test_offline_progress.cpp  test_pipeline.cpp  test_segment_detector.cpp  test_silence_filter.cpp  test_streaming.cpp  test_streaming.py  test_transcriber.cpp
embedding-ggml/: .gitignore  CMakeLists.txt
embedding-ggml/src/: fbank.cpp  fbank.h  model.cpp
embedding-ggml/src/coreml/: coreml_bridge.mm
embedding-ggml/tests/: test_accuracy.py  test_coreml_accuracy.py  test_fbank.py
models/embedding-ggml/: CMakeLists.txt  convert.py  convert_coreml.py
models/embedding-ggml/src/: main.cpp  model.h
models/embedding-ggml/src/coreml/: coreml_bridge.h
models/segmentation-ggml/: .gitignore  CMakeLists.txt
models/segmentation-ggml/docs/: layer_info.json
models/segmentation-ggml/src/: lstm.cpp  main.cpp  model.h  sincnet.cpp
models/segmentation-ggml/src/coreml/: segmentation_coreml_bridge.h  segmentation_coreml_bridge.mm
models/segmentation-ggml/tests/: compare_outputs.py  test_accuracy.py
samples/: default.json  dtw-top2-avg.json  dtw-top2-norm.json  dtw-top2.json  dtw.json
segmentation-ggml/: CMakeLists.txt  README.md  convert.py  convert_coreml.py
segmentation-ggml/docs/: activation_shapes.json  architecture.md
segmentation-ggml/src/: lstm.h  model.cpp  sincnet.h
segmentation-ggml/tests/: test_pipeline_integration.py
tools/: rttm-viewer.html  test-word-timestamps.sh  transcript-viewer.html  whisper-viewer.html
tools/streaming-viewer/: README.md  index.html  server.py
